--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  /* Custom color */
+  --color-midnight: #cdc4a9;
 }
 
 :root {
